<resources>
    <string name="app_name">Калькулятор</string>
    <string name="action_graph">График платежей</string>
    <string name="action_plot">Диаграмма платежей</string>

    <string name="size_debt_title">Сумма кредита</string>
    <string name="percent_size_title">Ставка кредита</string>
    <string name="long_in_month">Срок кредита, мес.</string>

    <string name="monthlypay_title">Всего:%1$s</string>
    <string name="monthlydebt_title">Долг:%1$s</string>
    <string name="monthlypercent_title">Проц.:%1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_begin_title">Дата начала</string>
    <string name="ensurance_title">Учесть страховку</string>
    <string name="save_button_title">Сохранить</string>
    <string name="calc_button_title">Рассчитать</string>
    <string name="action_config">Параметры</string>
    <string name="graph_desc_summ_title">Сумма платежа</string>
    <string name="graph_desc_by_parts_title">Включая:</string>
    <string name="graph_desc_debt_title">В тело долга</string>
    <string name="graph_desc_percent_title">По процентам</string>
    <string name="graph_desc_month_title">Месяц</string>
    <string name="graph_desc_ensurance_title">Страховка</string>

</resources>
