<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".graph.GraphFragment">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/graph_description"
        android:columnCount="2"
        android:rowCount="6"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graph_desc_summ_title"
            android:id="@+id/graphDescrSum"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/graphDescrSumValue"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graph_desc_by_parts_title"
            android:layout_row="1"
            android:layout_column="0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graph_desc_debt_title"
            android:id="@+id/graphDescrDebt"
            android:layout_row="2"
            android:layout_column="0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/graphDescrDebtValue"
            android:layout_row="2"
            android:layout_column="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graph_desc_percent_title"
            android:id="@+id/graphPercentDebt"
            android:layout_row="3"
            android:layout_column="0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/graphPercentDebtValue"
            android:layout_row="3"
            android:layout_column="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graph_desc_ensurance_title"
            android:id="@+id/graphEnsurance"
            android:layout_row="4"
            android:layout_column="0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/graphEnsuranceValue"
            android:layout_row="4"
            android:layout_column="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graph_desc_month_title"
            android:id="@+id/grapMonth"
            android:layout_row="5"
            android:layout_column="0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grapMonthValue"
            android:layout_row="5"
            android:layout_column="1"/>

    </GridLayout>

    <ru.squel.ipotekacalc.graph.GraphPlotter
        android:id="@+id/GraphPlotter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="ru.squel.ipotekacalc.GraphFragment"
        tools:showIn="@layout/activity_main"/>


</LinearLayout>